# Red

./: .gitignore  Build.bat  Build.sh  README.md  TASKS.md  deleteme.txt
res/: config.cfg
src/: App.cpp  CMakeLists.txt  Data_manager.cpp  Drawer.cpp  Event_game.cpp  Game_object.cpp  Graph.cpp  Graph_Line.cpp  Graph_Point.cpp  Json_Parser.cpp  Line.cpp  MapLayer1.cpp  MapLayer10.cpp  Market.cpp  Menu.cpp  Net.cpp  Network_manager.cpp  Player.cpp  Post.cpp  Rating.cpp  Regulator.cpp  Storage.cpp  Town.cpp  Train.cpp  conanfile.txt
src/Data_manager/: Data_manager.cpp  Event_game.cpp  Games.cpp  Graph.cpp  Graph_Line.cpp  Graph_Point.cpp  MapLayer1.cpp  MapLayer10.cpp  Market.cpp  Player.cpp  Storage.cpp  Town.cpp  Train.cpp
src/Drawer/: DrawableContainer.cpp  Drawer.cpp  DrawerContainer.cpp  Forces.cpp
src/Json/: Json_Parser.cpp
src/Network/: Network_manager.cpp
src/Regulator/: Decision.cpp  Regulator.cpp  Route.cpp  RoutePlaner.cpp  TrainDriver.cpp
src/headers/: Menu.h
src/headers/Data_manager/: Data_manager.h  Event_game.h  Game_object.h  Games.h  Graph.h  Graph_Line.h  Graph_Point.h  MapLayer1.h  MapLayer10.h  Player.h  Rating.h  Storage.h  Town.h  Train.h
src/headers/Drawer/: DrawableContainer.h  Drawer.h  DrawerContainer.h  Forces.h
src/headers/Json/: Json_Parser.h
src/headers/Network/: Network_manager.h
src/headers/Regulator/: Decision.h  Regulator.h  Route.h  RoutePlaner.h  TrainDriver.h
src/include/: Data_manager.h  Drawer.h  Event_game.h  Game_object.h  Graph.h  Graph_Line.h  Graph_Point.h  Json_Parser.h  Line.h  MapLayer1.h  Market.h  Net.h  Network_manager.h  Player.h  Post.h  Rating.h  Regulator.h  Storage.h  Town.h  Train.h
test_graphs/: custom1.json  custom2.json
